--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
   --foreground: #171717;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -15,13 +17,10 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f5f5; /* soft off-white */
+  font-family: "Merriweather", serif;
+  height: 100vh;
 }
 
 * {
@@ -39,4 +38,22 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  line-height: 1.6;
+  height: 100%;
+}
+
+h1,
+h2 {
+  color: #333;
+}
+
+p {
+  color: #555;
+  font-size: 1.1em;
 }
