--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,20 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --header-height: 90px;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
+  font-family: "Merriweather", serif;
+  line-height: 1.6;
 }
 body {
-  background-color: #f5f5f5; /* soft off-white */
-  font-family: "Merriweather", serif;
+  background-color: #f5f5f5;
   height: 100vh;
 }
 
@@ -34,18 +29,10 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  line-height: 1.6;
-  height: 100%;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
