--- a/src/components/BringThemHomeTicker/BringThemHomeTicker.module.css
+++ b/src/components/BringThemHomeTicker/BringThemHomeTicker.module.css
@@ -1,7 +1,7 @@
 .bthn {
-  position: relative !important;
+  /* position: relative !important;
   bottom: auto !important;
   left: auto !important;
   right: auto !important;
-  top: auto !important;
+  top: auto !important; */
 }
