--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,8 @@ body {
 body {
   background-color: #f5f5f5;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 * {
@@ -46,9 +48,10 @@ p {
 }
 
 main {
-  max-width: 800px;
+  width: 800px;
   margin: 0 auto;
   padding: 20px;
   background: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  flex: 1;
 }
