--- a/src/app/[locale]/story/page.module.css
+++ b/src/app/[locale]/story/page.module.css
@@ -1,31 +1,94 @@
+.flipBook {
+  position: relative;
+  overflow: hidden;
+}
+
 .bookContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80%;
 }
 
 .page {
-  background-color: white;
-  border: 1px solid #ccc;
+  position: absolute;
+  width: 100%;
+  transform-origin: center;
+  background: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 400px;
-  width: 300px;
-  padding: 20px;
-  .page-body {
-    flex: 1;
+}
+
+.pageCover {
+  background: #f5f5f5; /* Cover background color */
+  color: #333; /* Text color for the cover */
+  font-size: 24px; /* Cover title font size */
+}
+
+.pageContent {
+  padding: 20px; /* Space inside the page */
+  text-align: center; /* Center the content */
+}
+
+.pageHeader {
+  font-size: 20px; /* Header font size */
+  margin-bottom: 10px; /* Space below the header */
+}
+
+.pageImage {
+  min-height: 250px;
+  background-color: #eaeaea;
+  margin-bottom: 10px;
+}
+
+.pageText {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.pageFooter {
+  font-size: 14px;
+  color: #666;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 94%;
+  border-top: 1px dashed #998466;
+  text-align: left;
+  .page.page-cover {
+    background-color: #e3d0b5;
+    color: #785e3a;
+    border: 1px solid #998466;
   }
 }
 
-.controls {
-  margin-top: 20px;
+.container {
+  margin-top: 20px; /* Space above the control container */
+  display: flex; /* Flexbox for alignment */
+  justify-content: space-between; /* Space between controls */
+  align-items: center; /* Center vertically */
 }
 
 .button {
-  margin: 0 10px;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+.controls {
+  align-self: baseline;
+  z-index: 3;
 }
