--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,12 @@
 .header {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   background-color: black;
   color: white;
-  min-height: var(--header-height);
+  z-index: 1000;
   padding: 16px;
   font-size: 20px;
 
