--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --header-height: 90px;
+  --header-height: 64px;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
@@ -9,15 +9,15 @@
 html,
 body {
   max-width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Merriweather", serif;
   line-height: 1.6;
 }
 body {
   background-color: #f5f5f5;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 * {
@@ -48,10 +48,15 @@ p {
 }
 
 main {
-  width: 800px;
   margin: 0 auto;
+  margin-top: var(--header-height);
+  overflow: hidden;
+  width: 100%;
   padding: 20px;
   background: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
