--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -3,19 +3,6 @@
   overflow: hidden;
 }
 
-.bookContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
-  width: 80%;
-  height: 750px;
-  @media only screen and (max-width: 600px) {
-    height: 400px;
-    width: 85%;
-  }
-}
-
 .page {
   position: absolute;
   width: 100%;
@@ -95,6 +82,14 @@
 }
 
 .controls {
-  align-self: baseline;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   z-index: 3;
+}
+
+.pageCount {
+  display: flex;
+  gap: 4px;
+  align-items: center;
 }
