--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -1,8 +1,3 @@
-.flipBook {
-  position: relative;
-  overflow: hidden;
-}
-
 .page {
   position: absolute;
   width: 100%;
@@ -15,55 +10,9 @@
   align-items: center;
 }
 
-.pageCover {
-  background: #f5f5f5; /* Cover background color */
-  color: #333; /* Text color for the cover */
-  font-size: 24px; /* Cover title font size */
-}
-
 .pageContent {
-  padding: 20px; /* Space inside the page */
-  text-align: center; /* Center the content */
-}
-
-.pageHeader {
-  font-size: 20px; /* Header font size */
-  margin-bottom: 10px; /* Space below the header */
-}
-
-.pageImage {
-  min-height: 250px;
-  background-color: #eaeaea;
-  margin-bottom: 10px;
-}
-
-.pageText {
-  font-size: 16px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.pageFooter {
-  font-size: 14px;
-  color: #666;
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: 94%;
-  border-top: 1px dashed #998466;
-  text-align: left;
-  .page.page-cover {
-    background-color: #e3d0b5;
-    color: #785e3a;
-    border: 1px solid #998466;
-  }
-}
-
-.container {
-  margin-top: 20px; /* Space above the control container */
-  display: flex; /* Flexbox for alignment */
-  justify-content: space-between; /* Space between controls */
-  align-items: center; /* Center vertically */
+  padding: 20px;
+  text-align: center;
 }
 
 .button {
@@ -86,6 +35,7 @@
   justify-content: space-between;
   width: 100%;
   z-index: 3;
+  margin-bottom: 16px;
 }
 
 .pageCount {
