--- a/src/components/Book/PageCover/PageCover.module.css
+++ b/src/components/Book/PageCover/PageCover.module.css
@@ -1,55 +1,5 @@
-.page {
-  position: absolute;
-  width: 100%;
-  transform-origin: center;
-  background: white;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .pageCover {
-  background: #f5f5f5; /* Cover background color */
-  color: #333; /* Text color for the cover */
-  font-size: 24px; /* Cover title font size */
-}
-
-.pageContent {
-  padding: 20px; /* Space inside the page */
-  text-align: center; /* Center the content */
-}
-
-.pageHeader {
-  font-size: 20px; /* Header font size */
-  margin-bottom: 10px; /* Space below the header */
-}
-
-.pageImage {
-  min-height: 250px;
-  background-color: #eaeaea;
-  margin-bottom: 10px;
-}
-
-.pageText {
-  font-size: 16px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.pageFooter {
-  font-size: 14px;
-  color: #666;
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  width: 94%;
-  border-top: 1px dashed #998466;
-  text-align: left;
-  .page.page-cover {
-    background-color: #e3d0b5;
-    color: #785e3a;
-    border: 1px solid #998466;
-  }
+  background: #f5f5f5;
+  color: #333;
+  font-size: 24px;
 }
