--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -20,6 +20,7 @@
   height: 70%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   transition: opacity 0.5s, transform 0.5s;
 }
