--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,25 +1,26 @@
 .backdrop {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: hidden;
-  z-index: 999;
-  transition: opacity 0.5s;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.85);
+  z-index: 40;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
-  z-index: 2000;
-  width: 70%;
-  height: 70%;
+  background-color: white;
+  width: min(70vw, 800px);
+  height: min(70vh, 600px);
+  border-radius: 0.5rem;
+  z-index: 50;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  transition: opacity 0.5s, transform 0.5s;
-  > div {
-    flex: 1;
-  }
+  overflow: auto;
+  max-height: 100%;
+}
+
+.modalContent {
+  padding: 2rem;
+  flex-grow: 1;
 }
