Refactor for next.js UG

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --header-height: 64px;
 }
 
-/* @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
 html,
 body {
