--- a/src/components/TermsAndConditions/TermsAndConditions.module.css
+++ b/src/components/TermsAndConditions/TermsAndConditions.module.css
@@ -8,6 +8,8 @@
 }
 
 .email {
-  color: blue;
-  text-decoration: underline;
+  color: var(--link);
+  &:hover {
+    text-decoration: underline;
+  }
 }
