--- a/src/app/[locale]/about/page.module.css
+++ b/src/app/[locale]/about/page.module.css
@@ -3,3 +3,21 @@
   flex-direction: column;
   align-items: center;
 }
+
+.socialIcons {
+  margin-top: 20px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.socialIcons a {
+  color: var(--yellow);
+  margin: 0 15px;
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+}
+
+.socialIcons a:hover {
+  color: #ff6f00;
+}
