--- a/src/app/[locale]/story/page.module.css
+++ b/src/app/[locale]/story/page.module.css
@@ -1,7 +1,16 @@
-.storyContainer {
-  position: relative;
-
+.pageContainer {
+  flex: 1;
   width: 100%;
+  background: url("/images/book-background.jpg") no-repeat center center fixed;
+  background-size: cover;
+  filter: grayscale(50%) contrast(1.2);
+}
+
+.storyContainer {
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  padding: 24px;
   @media only screen and (min-width: 450px) {
     width: 75%;
   }
@@ -9,43 +18,4 @@
   @media only screen and (min-width: 1450px) {
     width: 55%;
   }
-}
-
-.container {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.page {
-  position: absolute;
-  width: 100%;
-  transform-origin: center;
-  background: white;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pageContent {
-  padding: 20px;
-  text-align: center;
-}
-
-.button {
-  padding: 10px 15px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #0056b3;
 }
