--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -3,11 +3,20 @@
   width: 100%;
   transform-origin: center;
   background: white;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &.left {
+    box-shadow: inset -7px 0 30px -7px rgba(0, 0, 0, 0.4),
+      7px 0 30px -7px rgba(0, 0, 0, 0.4);
+  }
+
+  &.right {
+    box-shadow: inset 7px 0 30px -7px rgba(0, 0, 0, 0.4),
+      7px 0 30px -7px rgba(0, 0, 0, 0.4);
+  }
 }
 
 .pageContent {
@@ -19,13 +28,12 @@
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
-  background-color: #007bff;
-  color: white;
+  background-color: rgb(203, 36, 36);
+  color: var(--light-grey);
   cursor: pointer;
   transition: background-color 0.3s;
-  cursor: pointer;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: var(--red);
 }
