--- a/src/components/PrivacyPolicy/PrivacyPolicy.module.css
+++ b/src/components/PrivacyPolicy/PrivacyPolicy.module.css
@@ -12,7 +12,6 @@
 .subTitle {
   font-weight: bold;
   margin-top: 20px;
-  margin-bottom: 10px;
   font-size: 1.3rem;
 }
 
@@ -51,8 +50,10 @@
 }
 
 .email {
-  color: blue;
-  text-decoration: underline;
+  color: var(--link);
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 @media (max-width: 768px) {
