--- a/src/components/PrivacyPolicy/PrivacyPolicy.module.css
+++ b/src/components/PrivacyPolicy/PrivacyPolicy.module.css
@@ -1,6 +1,8 @@
 .container {
   width: 80%;
   margin: 0 auto;
+  background-color: #1a1a1aa9;
+  padding: 0 24px 24px 24px;
 }
 
 .title {
@@ -30,8 +32,10 @@
 }
 
 .link {
-  color: #0066cc;
-  text-decoration: none;
+  color: var(--yellow);
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .link:hover {
@@ -47,13 +51,6 @@
 .rtl .subTitle,
 .rtl .paragraph {
   text-align: right;
-}
-
-.email {
-  color: var(--link);
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 @media (max-width: 768px) {
