--- a/src/components/TermsAndConditions/TermsAndConditions.module.css
+++ b/src/components/TermsAndConditions/TermsAndConditions.module.css
@@ -2,13 +2,15 @@
   width: 70%;
   margin: 0 auto;
   text-align: left;
+  background-color: #1a1a1aa9;
+  padding: 0 24px 24px 24px;
   &.rtl {
     text-align: right;
   }
 }
 
 .email {
-  color: var(--link);
+  color: var(--yellow);
   &:hover {
     text-decoration: underline;
   }
