--- a/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
+++ b/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
@@ -1,7 +1,9 @@
 .container {
-  padding: 20px;
-  max-width: 800px;
+  width: 70%;
   margin: 0 auto;
+  text-align: left;
+  background-color: #1a1a1aa9;
+  padding: 0 24px 24px 24px;
   &.rtl {
     text-align: right;
   }
