--- a/src/components/Book/Page/Page.module.css
+++ b/src/components/Book/Page/Page.module.css
@@ -6,14 +6,17 @@
 
 .pageImage {
   min-height: 250px;
-  background-color: #eaeaea;
+  background-color: #a3c4ea;
   margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 .pageText {
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 20px;
+  color: black;
 }
 
 .pageFooter {
