--- a/src/components/BringThemHomeTicker/BringThemHomeTicker.module.css
+++ b/src/components/BringThemHomeTicker/BringThemHomeTicker.module.css
@@ -1,7 +1,9 @@
 .bthn {
-  /* position: relative !important;
-  bottom: auto !important;
-  left: auto !important;
-  right: auto !important;
-  top: auto !important; */
+  bottom: var(--footer-height) !important;
+}
+
+@media (max-width: 768px) {
+  .bthn {
+    bottom: var(--footer-height-mobile) !important;
+  }
 }
