--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -25,3 +25,15 @@
   padding: 2rem;
   flex-grow: 1;
 }
+
+.pageImage {
+  min-height: 250px;
+  background-color: #a3c4ea;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+.title {
+  justify-self: center;
+}
