--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -27,6 +27,9 @@
 }
 
 .pageImage {
+  justify-self: center;
+  position: relative;
+  width: 50%;
   min-height: 250px;
   background-color: #a3c4ea;
   margin-bottom: 10px;
