--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,30 @@ h3 {
 p {
   font-size: 1.1em;
 }
+
+*::-webkit-scrollbar {
+  width: 14px;
+  height: 14px;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #3a4750;
+  border-radius: 50rem;
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #66b3ff;
+  transform: scale(1.1);
+}
+
+*::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 50rem;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background: #e0e0e0;
+}
