--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,6 +7,9 @@
   flex-direction: column;
   align-items: center;
   padding: 8px;
+  @media (max-width: 768px) {
+    font-size: 16px;
+  }
 }
 
 .creator {
@@ -36,8 +39,15 @@
   gap: 8px;
   justify-content: center;
   color: white;
-  font-size: 16px;
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
   font-weight: 600;
+
+  @media (max-width: 768px) {
+    justify-content: space-around;
+    width: 100%;
+  }
 }
 
 @media (min-width: 450px) {
