--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,10 @@
   color: white;
   z-index: 1000;
   padding: 16px;
-  font-size: 20px;
+
+  @media (max-width: 768px) {
+    font-size: 16px;
+  }
 }
 
 .header .nav {
