--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -26,12 +26,14 @@
 }
 
 .modalContent {
+  padding: 1rem;
   @media (max-width: 768px) {
     padding: 0.5rem;
   }
 
   flex-grow: 1;
 }
+
 .pageImages {
   display: flex;
   align-items: center;
@@ -55,4 +57,5 @@
 
 .title {
   justify-self: center;
+  margin-bottom: 0.5rem;
 }
