--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -15,6 +15,10 @@
   &.story {
     background: url("/images/book-background.jpg") no-repeat center center fixed;
   }
+
+  @media (max-width: 768px) {
+    margin-top: 56px;
+  }
 }
 
 .container {
