--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -7,6 +7,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px;
+
+  @media (max-width: 1024px) {
+    padding: 8px;
+  }
 
   &.left {
     box-shadow: inset -7px 0 30px -7px rgba(0, 0, 0, 0.4),
@@ -20,8 +25,17 @@
 }
 
 .pageContent {
-  padding: 20px;
   text-align: center;
+  width: 100%;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
+
+  overflow: auto;
+
+  @media (max-width: 1024px) {
+    height: 93%;
+  }
 }
 
 .button {
@@ -32,6 +46,7 @@
   color: var(--light-grey);
   cursor: pointer;
   transition: background-color 0.3s;
+  align-self: center;
 }
 
 .button:hover {
