--- a/src/components/Book/Page/Page.module.css
+++ b/src/components/Book/Page/Page.module.css
@@ -12,10 +12,11 @@
 }
 
 .pageText {
-  font-size: 16px;
+  font-size: 13px;
   line-height: 1.5;
   margin-bottom: 20px;
   color: black;
+  text-align: justify;
 }
 
 .pageFooter {
