--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -1,3 +1,32 @@
+.storyContainer {
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  padding: 24px;
+  flex: 1;
+
+  &.loading {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: 680px) {
+    width: 75%;
+  }
+
+  @media only screen and (min-width: 1450px) {
+    width: 70%;
+  }
+
+  @media only screen and (min-width: 1450px) {
+    width: 65%;
+  }
+
+  @media only screen and (min-width: 1670px) {
+    width: 57%;
+  }
+}
+
 .page {
   position: absolute;
   width: 100%;
@@ -51,4 +80,47 @@
 
 .button:hover {
   background-color: var(--red);
+}
+
+.loaderContainer {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  height: 80px;
+  aspect-ratio: 1;
+  display: grid;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  --c: no-repeat linear-gradient(#fff 0 0);
+  background: var(--c), var(--c);
+  background-size: 25% 50%;
+  animation: l5 1.5s infinite linear;
+}
+.loader:after {
+  transform: scale(-1);
+}
+@keyframes l5 {
+  0%,
+  5% {
+    background-position: 33.4% 100%, 66.6% 100%;
+  }
+  25% {
+    background-position: 33.4% 100%, 100% 0;
+  }
+  50% {
+    background-position: 0 0, 100% 0;
+  }
+  75% {
+    background-position: 0 0, 66.6% 100%;
+  }
+  95%,
+  100% {
+    background-position: 33.4% 100%, 66.6% 100%;
+  }
 }
