--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,7 +4,7 @@
   font-size: 20px;
   position: relative;
   display: flex;
-  padding: 8px;
+  padding: 8px 16px;
   width: 100%;
   justify-content: space-between;
   flex-direction: row;
