--- a/src/components/PrivacyPolicy/PrivacyPolicy.module.css
+++ b/src/components/PrivacyPolicy/PrivacyPolicy.module.css
@@ -1,27 +1,18 @@
 .title {
-  font-size: 2rem;
+  font-size: 2.5em;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .subTitle {
   font-weight: bold;
-  margin-top: 20px;
   font-size: 1.3rem;
 }
 
 .paragraph {
   font-size: 1rem;
   line-height: 1.6;
-  margin-bottom: 20px;
-}
-
-.list {
-  padding-left: 20px;
-}
-
-.list li {
-  margin-bottom: 5px;
+  margin-bottom: 8px;
 }
 
 .link {
@@ -37,12 +28,6 @@
 
 .rtl {
   direction: rtl;
-  text-align: right;
-}
-
-.rtl .title,
-.rtl .subTitle,
-.rtl .paragraph {
   text-align: right;
 }
 
