--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 8px 20px;
 
   @media (max-width: 1024px) {
     padding: 8px;
@@ -63,11 +63,12 @@
   overflow: auto;
 
   @media (max-width: 1024px) {
-    height: 93%;
+    height: 90%;
   }
 }
 
 .button {
+  font-size: 2rem;
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
