--- a/src/components/Book/Controls/Controls.module.css
+++ b/src/components/Book/Controls/Controls.module.css
@@ -13,7 +13,7 @@
   background-color: rgb(203, 36, 36);
   padding: 8px 16px;
   border-radius: 5px;
-  font-size: 13px;
+  font-size: 1.8rem;
   &.rtl {
     flex-direction: row-reverse;
   }
