--- a/src/components/Book/Page/Page.module.css
+++ b/src/components/Book/Page/Page.module.css
@@ -1,5 +1,5 @@
 .pageHeader {
-  font-size: 20px;
+  font-size: 3rem;
   margin-bottom: 10px;
   color: var(--red);
 }
@@ -12,7 +12,7 @@
 }
 
 .pageText {
-  font-size: 13px;
+  font-size: 2rem;
   line-height: 1.5;
   margin-bottom: 20px;
   color: black;
@@ -20,7 +20,7 @@
 }
 
 .pageFooter {
-  font-size: 14px;
+  font-size: 2rem;
   color: #666;
   position: absolute;
   bottom: 10px;
