--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,10 +8,10 @@
   color: white;
   z-index: 1000;
   padding: 16px;
-  font-size: 20px;
+  font-size: 2.5rem;
 
   @media (max-width: 768px) {
-    font-size: 16px;
+    font-size: 2rem;
   }
 }
 
