--- a/src/components/LanguageInput/LanguageInput.module.css
+++ b/src/components/LanguageInput/LanguageInput.module.css
@@ -7,6 +7,8 @@
 .language {
   cursor: pointer;
   text-transform: uppercase;
+  font-family: "Helvetica", sans-serif !important;
+  font-size: 2rem;
 
   &.active {
     color: var(--red);
