--- a/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
+++ b/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
@@ -1,33 +1,25 @@
 .title {
-  font-size: 2.5em;
+  font-size: 3em;
+  font-weight: bold;
   margin-bottom: 16px;
 }
 
 .subTitle {
-  font-size: 2em;
-  margin-top: 30px;
+  font-weight: bold;
+  font-size: 2.2rem;
 }
 
 .paragraph {
+  font-size: 1.8rem;
   line-height: 1.6;
   margin-bottom: 8px;
 }
 
-.list {
-  list-style-type: none;
-  padding: 0;
-}
-
-.list li {
-  margin-bottom: 10px;
-}
-
 .link {
-  color: var(--link);
-}
-
-.link:hover {
-  text-decoration: underline;
+  color: var(--yellow);
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .contactHeader {
@@ -35,30 +27,35 @@
   font-weight: bold;
 }
 
+.rtl {
+  direction: rtl;
+  text-align: right;
+}
+
 @media (max-width: 768px) {
   .title {
-    font-size: 1.75rem;
+    font-size: 2.5rem;
   }
 
   .subTitle {
-    font-size: 1.3rem;
+    font-size: 1.9rem;
   }
 
   .paragraph {
-    font-size: 0.9rem;
+    font-size: 1.5rem;
   }
 }
 
 @media (max-width: 480px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .subTitle {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
   }
 
   .paragraph {
-    font-size: 0.85rem;
+    font-size: 1.2rem;
   }
 }
