--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -77,6 +77,9 @@
   cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
+  &.cool-font {
+    font-family: "OHSavyonChenKipper", sans-serif;
+  }
 }
 
 .button:hover {
