--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -12,6 +12,10 @@
   background-size: cover;
   filter: grayscale(50%) contrast(1.2);
 
+  &.cool-font {
+    font-family: "OHSavyonChenKipper", sans-serif;
+  }
+
   &.story {
     background: url("/images/book-background.jpg") no-repeat center center fixed;
   }
