--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #333333;
   color: white;
-  font-size: 2.2rem;
+
   position: relative;
   display: flex;
   padding: 8px 16px;
@@ -10,7 +10,6 @@
   flex-direction: row;
 
   @media (max-width: 768px) {
-    font-size: 1.8rem;
     flex-direction: column;
     align-items: center;
     gap: 8px;
@@ -25,8 +24,13 @@
   display: flex;
   gap: 6px;
   align-items: center;
+  & > p {
+    font-weight: 600;
+    font-size: 2.2rem;
+  }
   & a {
     height: 20px;
+
     color: var(--red);
     transition: color 0.3s ease;
     &:hover {
@@ -42,8 +46,8 @@
   justify-content: center;
   color: white;
   font-weight: 600;
+  font-size: 2rem;
   @media (max-width: 768px) {
-    font-size: 1.6rem;
     justify-content: space-between;
     width: 90%;
   }
