--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,14 +8,11 @@
   color: white;
   z-index: 1000;
   padding: 16px;
-  font-size: 2.5rem;
-
-  @media (max-width: 768px) {
-    font-size: 2rem;
-  }
 }
 
 .header .nav {
   display: flex;
   gap: 8px;
+  font-size: 2.5rem;
+  font-weight: 600;
 }
