--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -69,7 +69,7 @@
 
 .button {
   font-size: 2rem;
-  padding: 10px 15px;
+  padding: 0 15px;
   border: none;
   border-radius: 5px;
   background-color: rgb(203, 36, 36);
