--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -69,7 +69,7 @@
 
 .button {
   font-size: 2rem;
-  padding: 0 15px;
+  padding: 10px 15px;
   border: none;
   border-radius: 5px;
   background-color: rgb(203, 36, 36);
@@ -78,6 +78,7 @@
   transition: background-color 0.3s;
   align-self: center;
   &.cool-font {
+    padding: 0 15px;
     font-family: "OHSavyonChenKipper", sans-serif;
   }
 }
