--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -77,7 +77,7 @@
   cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
-  &.cool-font {
+  &:dir(rtl) {
     padding: 0 15px;
     font-family: "OHSavyonChenKipper", sans-serif;
   }
