--- a/src/app/[locale]/about/page.module.css
+++ b/src/app/[locale]/about/page.module.css
@@ -1,11 +1,18 @@
-.container {
+.aboutContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
 }
 
 .header {
   font-size: 4rem;
+}
+
+.imageContainer {
+  position: relative;
+  min-height: 250px;
+  width: 250px;
 }
 
 .socialIcons {
