--- a/src/components/BringThemHomeTicker/BringThemHomeTicker.module.css
+++ b/src/components/BringThemHomeTicker/BringThemHomeTicker.module.css
@@ -2,7 +2,7 @@
   bottom: var(--footer-height) !important;
 }
 
-@media (max-width: 768px) {
+@media (max-width: var(--bp-largest)) {
   .bthn {
     bottom: var(--footer-height-mobile) !important;
   }
