--- a/src/components/TermsAndConditions/TermsAndConditions.module.css
+++ b/src/components/TermsAndConditions/TermsAndConditions.module.css
@@ -26,7 +26,7 @@
   text-decoration: underline;
 }
 
-@media (max-width: 768px) {
+@media (max-width: var(--bp-largest)) {
   .title {
     font-size: 2.5rem;
   }
