--- a/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
+++ b/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
@@ -27,7 +27,7 @@
   font-weight: bold;
 }
 
-@media (max-width: var(--bp-largest)) {
+@media (max-width: 768px) {
   .title {
     font-size: 2.5rem;
   }
