--- a/src/components/LanguageInput/LanguageInput.module.css
+++ b/src/components/LanguageInput/LanguageInput.module.css
@@ -9,7 +9,7 @@
   text-transform: uppercase;
   font-size: 2rem;
 
-  @media (max-width: var(--bp-largest)) {
+  @media (max-width: 768px) {
     font-size: 1.6rem;
   }
 
