--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -24,7 +24,7 @@
     font-family: "OHSavyonChenKipper", sans-serif;
   }
 
-  @media (max-width: var(--bp-largest)) {
+  @media (max-width: 768px) {
     width: 90vw;
   }
 }
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  @media (max-width: var(--bp-largest)) {
+  @media (max-width: 768px) {
     padding: 0.5rem;
   }
 
@@ -60,7 +60,7 @@
   margin-bottom: 10px;
   border-radius: 4px;
 
-  @media (max-width: var(--bp-largest)) {
+  @media (max-width: 768px) {
     width: 100%;
   }
 }
