--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -22,7 +22,7 @@
     background: url("/images/book-background.jpg") no-repeat center center fixed;
   } */
 
-  @media (max-width: var(--bp-largest)) {
+  @media (max-width: 768px) {
     margin-top: 56px;
   }
 }
@@ -31,7 +31,7 @@
   width: 85%;
   margin: 0 auto;
   background-color: #1a1a1aa9;
-  padding: 0 24px 24px 24px;
+  padding: 16px 24px 24px 24px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@
     width: 70%;
   }
 
-  @media (max-width: var(--bp-largest)) {
+  @media (max-width: 768px) {
     width: 100%;
   }
 }
