--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --link: #0070f3;
   --light-grey: #f5f5f5;
   --light-blue: #66b3ff8a;
+  --image-background: #333333;
   --footer-height: 60px;
   --footer-height-mobile: 20px;
 }
