--- a/src/components/Book/PageCover/PageCover.module.css
+++ b/src/components/Book/PageCover/PageCover.module.css
@@ -1,5 +1,16 @@
 .pageCover {
   background: #f5f5f5;
   color: #333;
-  font-size: 3rem;
+  font-size: 2.2rem;
+
+  &:dir(rtl) > .title {
+    font-size: 3rem;
+  }
+}
+
+.author {
+  color: #4d4d4d;
+  &:not(:dir(rtl)) {
+    font-size: 2.5rem;
+  }
 }
