--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -34,11 +34,12 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  flex-grow: 1;
+
   @media (max-width: 768px) {
+    gap: 0;
     padding: 0.5rem;
   }
-
-  flex-grow: 1;
 }
 
 .pageImages {
@@ -51,7 +52,7 @@
 
 .imageBackground {
   min-height: 250px;
-  width: 282px;
+  width: 332px;
   border-radius: 4px;
   background-color: var(--image-background);
   padding: 16px;
@@ -60,9 +61,8 @@
 .pageImage {
   justify-self: center;
   position: relative;
-  width: 250px;
+  width: 300px;
   min-height: 250px;
-  margin-bottom: 10px;
   border-radius: 4px;
 
   @media (max-width: 768px) {
@@ -79,4 +79,8 @@
 
 .text {
   padding: 0 2rem;
+
+  @media (max-width: 768px) {
+    padding: 1rem 0;
+  }
 }
