--- a/src/app/[locale]/about/page.module.css
+++ b/src/app/[locale]/about/page.module.css
@@ -4,22 +4,31 @@
   align-items: center;
 
   .nameContainer {
-    margin-top: -30px;
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 1.6rem;
+
+    & > * {
+      font-weight: 500;
+    }
 
     & > h2,
     & > span {
       font-size: 3rem;
       color: white;
     }
+
+    &:dir(rtl) {
+      margin-top: -2.4rem;
+    }
   }
 }
 
 .header {
   font-size: 6rem;
-  padding-bottom: 2rem;
+  &:dir(rtl) {
+    padding-bottom: 2rem;
+  }
 }
 
 .imageContainer {
@@ -29,15 +38,15 @@
 }
 
 .socialIcons {
-  margin-top: 20px;
+  margin-top: 2rem;
   display: flex;
-  gap: 16px;
+  gap: 1.6rem;
   align-items: center;
 }
 
 .socialIcons a {
   color: var(--yellow);
-  margin: 0 15px;
+  margin: 0 1.6rem;
   font-size: 1.5rem;
   transition: color 0.3s ease;
 }
