--- a/src/app/[locale]/error.module.css
+++ b/src/app/[locale]/error.module.css
@@ -1,10 +1,19 @@
 .header {
+  padding-top: 2rem;
+  font-size: 6rem;
+  line-height: 0.8;
+}
+
+.text {
   font-size: 4rem;
 }
 
 .action {
   display: flex;
-  gap: 4px;
+  gap: 0.4rem;
   align-items: center;
-  font-size: 3rem;
+
+  & > * {
+    font-size: 5rem;
+  }
 }
