--- a/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
+++ b/src/components/Accessibility/AccessibilityStatement/AccessibilityStatement.module.css
@@ -1,7 +1,7 @@
 .title {
   font-size: 3em;
   font-weight: bold;
-  margin-bottom: 16px;
+  margin-bottom: 1.6rem;
 }
 
 .subTitle {
@@ -12,7 +12,7 @@
 .paragraph {
   font-size: 1.8rem;
   line-height: 1.6;
-  margin-bottom: 8px;
+  margin-bottom: 0.8rem;
 }
 
 .link {
@@ -23,7 +23,7 @@
 }
 
 .contactHeader {
-  margin-top: 20px;
+  margin-top: 2rem;
   font-weight: bold;
 }
 
