--- a/src/components/Book/Controls/Controls.module.css
+++ b/src/components/Book/Controls/Controls.module.css
@@ -3,18 +3,19 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 16px;
+  margin-top: 1.6rem;
 }
 
 .pageCount {
   display: flex;
-  gap: 4px;
+  gap: 0.4rem;
   align-items: center;
   background-color: rgb(203, 36, 36);
-  padding: 8px 16px;
-  border-radius: 5px;
-  font-size: 1.8rem;
+  padding: 0.8rem 1.6rem;
+  border-radius: 0.4rem;
+  font-size: 2.5rem;
   &:dir(rtl) {
+    font-size: 1.8rem;
     flex-direction: row-reverse;
   }
 }
