--- a/src/components/Book/Page/Page.module.css
+++ b/src/components/Book/Page/Page.module.css
@@ -1,29 +1,29 @@
 .pageHeader {
-  font-size: 3rem;
-  margin-bottom: 10px;
+  font-size: 2.8rem;
+  margin-bottom: 1rem;
   color: var(--red);
 }
 
 .imageSection {
   width: 100%;
   background-color: var(--image-background);
-  padding: 16px 0;
-  border-radius: 4px;
+  padding: 1.6rem 0;
+  border-radius: 0.4rem;
 }
 
 .pageImage {
   position: relative;
   min-height: 250px;
   width: 300px;
-  margin-bottom: 10px;
-  border-radius: 4px;
+  margin-bottom: 1rem;
+  border-radius: 0.4rem;
   margin: 0 auto;
 }
 
 .pageText {
   font-size: 2rem;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   color: black;
   text-align: justify;
 }
@@ -32,8 +32,8 @@
   font-size: 2rem;
   color: #666;
   position: absolute;
-  bottom: 10px;
-  left: 10px;
+  bottom: 1rem;
+  left: 1rem;
   width: 94%;
   border-top: 1px dashed #998466;
   text-align: left;
@@ -42,4 +42,9 @@
     color: #785e3a;
     border: 1px solid #998466;
   }
+}
+
+.button {
+  font-size: 2rem;
+  padding: 0 1.5rem;
 }
