--- a/src/components/Book/PageCover/PageCover.module.css
+++ b/src/components/Book/PageCover/PageCover.module.css
@@ -1,16 +1,26 @@
 .pageCover {
   background: #f5f5f5;
   color: #333;
-  font-size: 2.2rem;
+  font-size: 3.5rem;
+  padding: 2rem;
+  line-height: 0.8;
 
-  &:dir(rtl) > .title {
-    font-size: 3rem;
+  .title {
+    padding-bottom: 1rem;
+  }
+
+  &:dir(rtl) {
+    padding: 0 2rem;
+
+    & > .title {
+      font-size: 3rem;
+    }
   }
 }
 
 .author {
   color: #4d4d4d;
-  &:not(:dir(rtl)) {
-    font-size: 2.5rem;
+  &:dir(ltr) {
+    font-size: 3rem;
   }
 }
