--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -33,7 +33,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 1.6rem;
   flex-grow: 1;
 
   @media (max-width: 768px) {
@@ -46,16 +46,16 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  gap: 16px;
+  gap: 1.6rem;
   flex-wrap: wrap;
 }
 
 .imageBackground {
   min-height: 250px;
   width: 332px;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   background-color: var(--image-background);
-  padding: 16px;
+  padding: 1.6rem;
 }
 
 .pageImage {
@@ -63,10 +63,10 @@
   position: relative;
   width: 300px;
   min-height: 250px;
-  border-radius: 4px;
+  border-radius: 0.4rem;
 
   @media (max-width: 768px) {
-    width: calc(100% -16px);
+    width: calc(100% -1.6rem);
   }
 }
 
@@ -81,6 +81,6 @@
   padding: 0 2rem;
 
   @media (max-width: 768px) {
-    padding: 1rem 0;
+    padding: 1rem 0.5rem;
   }
 }
