--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 0 auto;
-  margin-top: 64px;
+  margin-top: 5.6rem;
   overflow: hidden;
   width: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -11,8 +11,11 @@
   background: url("/images/7.jpg") no-repeat center center fixed;
   background-size: cover;
   filter: grayscale(50%) contrast(1.2);
-
   text-align: justify;
+
+  &.legal {
+    font-family: "Helvetica", sans-serif;
+  }
 
   &:dir(rtl):not(.legal) {
     font-family: "OHSavyonChenKipper", sans-serif;
@@ -21,17 +24,13 @@
   /* &.story {
     background: url("/images/book-background.jpg") no-repeat center center fixed;
   } */
-
-  @media (max-width: 768px) {
-    margin-top: 56px;
-  }
 }
 
 .container {
   width: 85%;
   margin: 0 auto;
   background-color: #1a1a1aa9;
-  padding: 16px 24px 24px 24px;
+  padding: 1.6rem 2.4rem 2.4rem 2.4rem;
   flex: 1;
   display: flex;
   flex-direction: column;
