Fix view for mobile

--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -59,8 +59,8 @@
   height: 95%;
   display: flex;
   flex-direction: column;
-
   overflow: auto;
+  overflow-x: hidden;
 
   @media (max-width: 1024px) {
     height: 90%;
