--- a/src/app/[locale]/about/page.module.css
+++ b/src/app/[locale]/about/page.module.css
@@ -33,8 +33,8 @@
 
 .imageContainer {
   position: relative;
-  min-height: 250px;
-  width: 250px;
+  min-height: 25rem;
+  width: 25rem;
 }
 
 .socialIcons {
@@ -49,6 +49,7 @@
   margin: 0 1.6rem;
   font-size: 1.5rem;
   transition: color 0.3s ease;
+  font-size: 2.4rem;
 }
 
 .socialIcons a:hover {
