--- a/src/components/Book/Page/Page.module.css
+++ b/src/components/Book/Page/Page.module.css
@@ -13,8 +13,8 @@
 
 .pageImage {
   position: relative;
-  min-height: 250px;
-  width: 300px;
+  min-height: 25rem;
+  width: 30rem;
   margin-bottom: 1rem;
   border-radius: 0.4rem;
   margin: 0 auto;
