--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,9 +10,9 @@
     }
   }
   & a {
-    height: 2.4rem;
     color: var(--yellow);
     transition: color 0.3s ease;
+    font-size: 2.4rem;
 
     &:hover {
       color: #ff6f00;
