--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,15 @@
   --yellow: #f7c500;
   --red: #cb2424;
   --dark-red: #b21d1d;
+  --white: #fff;
   --black: #1a1a1a;
   --link: #0070f3;
   --light-grey: #f5f5f5;
   --light-blue: #66b3ff8a;
   --image-background: #333333;
+  --page-background: #f5f5f5;
+  --page-text-color: #4d4d4d;
+  --social-hover: #ff6f00;
   --footer-height: 6rem;
   --footer-height-mobile: 2rem;
 }
