--- a/src/components/Book/PageCover/PageCover.module.css
+++ b/src/components/Book/PageCover/PageCover.module.css
@@ -1,6 +1,5 @@
 .pageCover {
-  background: #f5f5f5;
-  color: #333;
+  background-color: var(--page-background);
   font-size: 3.5rem;
   padding: 2rem;
   line-height: 0.8;
