--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -16,14 +16,14 @@
     line-height: 0.6;
 
     &:hover {
-      color: #ff6f00;
+      color: var(--social-hover);
     }
   }
 }
 
 .footer {
-  background-color: #333333;
-  color: white;
+  background-color: var(--image-background);
+  color: var(--white);
   position: relative;
   display: flex;
   padding: 0.8rem 1.6rem;
@@ -47,7 +47,7 @@
   flex-wrap: wrap;
   gap: 0.8rem;
   justify-content: center;
-  color: white;
+  color: var(--white);
 
   font-size: 2rem;
 
