--- a/src/components/Book/Page/Page.module.css
+++ b/src/components/Book/Page/Page.module.css
@@ -42,4 +42,8 @@
 button.button {
   font-size: 2rem;
   padding: 0 1.5rem;
+  &:dir(rtl) {
+    font-size: 2rem;
+    padding: 0.5rem 1.5rem 1rem 1.5rem;
+  }
 }
