--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: "Graffiti";
-  src: url("/fonts/Mar_a Mercedes Graffiti Shop.ttf") format("truetype");
+  src: url("/fonts/Calligraffitti-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
