--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -57,6 +57,10 @@
   font-size: 2.8rem;
   margin-bottom: 1rem;
   color: var(--red);
+
+  &:dir(ltr) {
+    font-size: 2.4rem;
+  }
 }
 
 .pageContent {
@@ -68,54 +72,7 @@
   overflow: auto;
   overflow-x: hidden;
 
-  @media (max-width: 1024px) {
-    height: 90%;
-  }
-
   & > h2 {
     color: var(--red);
-  }
-}
-
-.loaderContainer {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.loader {
-  height: 0.8rem;
-  aspect-ratio: 1;
-  display: grid;
-}
-.loader:before,
-.loader:after {
-  content: "";
-  --c: no-repeat linear-gradient(#fff 0 0);
-  background: var(--c), var(--c);
-  background-size: 25% 50%;
-  animation: l5 1.5s infinite linear;
-}
-.loader:after {
-  transform: scale(-1);
-}
-@keyframes l5 {
-  0%,
-  5% {
-    background-position: 33.4% 100%, 66.6% 100%;
-  }
-  25% {
-    background-position: 33.4% 100%, 100% 0;
-  }
-  50% {
-    background-position: 0 0, 100% 0;
-  }
-  75% {
-    background-position: 0 0, 66.6% 100%;
-  }
-  95%,
-  100% {
-    background-position: 33.4% 100%, 66.6% 100%;
   }
 }
