--- a/src/components/PageContainer/PageContainer.module.css
+++ b/src/components/PageContainer/PageContainer.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 0 auto;
-  margin-top: 5.6rem;
+  padding-top: 5rem;
   overflow: hidden;
   width: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -17,8 +17,11 @@
     font-family: "Helvetica", sans-serif;
   }
 
-  &:dir(rtl):not(.legal) {
-    font-family: "OHSavyonChenKipper", sans-serif;
+  &:dir(rtl) {
+    padding-top: 5.6rem;
+    &:not(.legal) {
+      font-family: "OHSavyonChenKipper", sans-serif;
+    }
   }
 }
 
