--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,54 +4,9 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   color: white;
   z-index: 1000;
   padding: 0 1.6rem 0.8rem 1.6rem;
-}
-
-.header .nav {
-  display: flex;
-  font-size: 2rem;
-
-  &:dir(rtl) {
-    font-family: "OHSavyonChenKipper", sans-serif;
-    font-size: 3rem;
-  }
-}
-
-.nav > li {
-  position: relative;
-
-  &:not(:first-child) {
-    padding-left: 1rem;
-  }
-
-  &:not(:last-child) {
-    padding-right: 1rem;
-  }
-}
-
-.nav:dir(rtl) > li {
-  padding: 0 1rem;
-  padding-left: 1rem;
-  &:first-child {
-    padding-right: 0;
-  }
-}
-
-.nav > li:not(:last-child)::after {
-  content: "";
-  position: absolute;
-  top: 0rem;
-  right: 0;
-  width: 0.2rem;
-  height: 80%;
-  background-color: #ccc;
-}
-
-.nav:dir(rtl) > li:not(:last-child)::after {
-  right: auto;
-  left: 0;
-  top: 0.8rem;
+  background-color: rgba(51, 51, 51, 0.8);
 }
