--- a/src/components/LanguageInput/LanguageInput.module.css
+++ b/src/components/LanguageInput/LanguageInput.module.css
@@ -8,6 +8,9 @@
   cursor: pointer;
   text-transform: uppercase;
   font-size: 1.5rem;
+  &:dir(rtl) {
+    padding-top: 1rem;
+  }
 
   &:dir(ltr) {
     font-size: 3rem;
@@ -20,9 +23,5 @@
 
   &.active {
     color: var(--red);
-  }
-
-  &.disabled {
-    cursor: not-allowed;
   }
 }
